# scorecard-python

./: .fernignore  .stats.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  api.md  mypy.ini  pyproject.toml  reference.md  release-please-config.json
.github/workflows/: ci.yml  create-releases.yml  publish-pypi.yml  release-doctor.yml
examples/: README.md  anthropic_simple.py  anthropic_streaming.py  basic_nesting.py  create_testset_and_run.ipynb  nested_advanced.py  nested_simple.py  nested_traces.py  openai_simple.py  openai_streaming.py  requirements.txt
scripts/: bootstrap  lint
scripts/utils/: upload-artifact.sh
src/scorecard/: __init__.py  _base_client.py  _client.py  _resource.py  _response.py  _streaming.py  _types.py  _version.py  base_client.py  client.py  environment.py  run_all_tests.py  telemetry.py  version.py
src/scorecard/_utils/: _logs.py
src/scorecard/core/: client_wrapper.py
src/scorecard/errors/: __init__.py  forbidden_error.py  unauthorized_error.py
src/scorecard/prompt/: __init__.py  client.py
src/scorecard/resources/: __init__.py  prompt.py  run_metric.py  scoring_config.py  traces.py  welcome.py
src/scorecard/run/: client.py
src/scorecard/run_metric/: client.py
src/scorecard/score/: client.py
src/scorecard/scoring_config/: client.py
src/scorecard/testcase/: __init__.py  client.py
src/scorecard/testrecord/: __init__.py  client.py
src/scorecard/testset/: client.py
src/scorecard/traces/: client.py
src/scorecard/tracing/: client.py
src/scorecard/types/: __init__.py  app_create_run_params.py  app_test_record_create.py  app_test_set_create.py  body_start_github_workflow_start_github_workflow_post.py  body_text_extract_text_extract_post.py  create_github_workflow_params.py  create_run_params.py  custom_schema.py  custom_schema_input.py  custom_schema_output.py  custom_variable.py  data_type_enum.py  execution_params.py  file_url.py  grade.py  ingestion_method.py  json_object.py  json_object_input_value.py  json_object_output_value.py  lib_dto_types_create_run_params.py  lib_dto_types_test_record_create.py  lib_dto_types_test_set_create.py  model_params.py  not_found_error_body.py  paginated_test_case_response.py  paginated_testcase_response.py  prompt.py  prompt_create_params.py  prompt_cursor_page.py  prompt_list_params.py  prompt_list_response.py  prompt_model_params_value.py  prompt_retrieve_by_name_params.py  prompt_update_params.py  role_enum.py  run.py  run_create_params.py  run_external.py  run_metric.py  (+42 more)
src/scorecard_ai/: __init__.py  _base_client.py  _client.py  _response.py  _streaming.py  _types.py  _version.py
src/scorecard_ai/_utils/: _logs.py  _resources_proxy.py
src/scorecard_ai/lib/: __init__.py  _helpers.py  _multi_turn_simulation.py  _wrap_llms_otel.py  wrap_llms.py
src/scorecard_ai/resources/: __init__.py  execution_records.py  metrics.py  projects.py  records.py  runs.py  scores.py  system_configs.py  systems.py  testcases.py  testsets.py
src/scorecardpy/: __init__.py  _base_client.py  _client.py  _exceptions.py  _resource.py  _response.py  _streaming.py  _types.py  _version.py  pagination.py
tests/: conftest.py  test_client.py  test_deepcopy.py  test_extract_files.py  test_files.py  test_models.py  test_qs.py  test_required_args.py  test_response.py  test_streaming.py  test_transform.py  utils.py
tests/api_resources/: test_execution_records.py  test_metrics.py  test_projects.py  test_prompt.py  test_records.py  test_run.py  test_run_metric.py  test_runs.py  test_scores.py  test_scoring_config.py  test_system_configs.py  test_systems.py  test_testcases.py  test_testset.py  test_testsets.py  test_traces.py  test_welcome.py
tests/test_utils/: test_datetime_parse.py  test_json.py  test_path.py  test_proxy.py  test_typing.py
tests/utils/: test_http_client.py  test_query_encoding.py  test_serialization.py
(+193 files in other folders)
