[tool.poetry]
name = "scorecard-ai"
version = "v1.0.0-beta0"
license = "Apache-2.0"
description = ""
readme = "README.md"
authors = []
packages = [
    { include = "scorecard", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.21.2"
pydantic = ">= 1.9.2"
pydantic-settings = "^2.2.1"
typing_extensions = ">= 4.0.0"

[tool.poetry.dev-dependencies]
mypy = "1.9.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.23.5"
python-dateutil = "^2.9.0"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
asyncio_mode = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
