[tool.poetry]
name = "scorecard-ai"
version = "1.1.1"
description = ""
readme = "README.md"
authors = []
keywords = []

classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
packages = [
    { include = "scorecard", from = "src"}
]

[project.urls]
Repository = 'https://github.com/scorecard-ai/scorecard-python'

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
boto3 = { version="^1.34.100", optional = true}
dspy-ai = { version="^2.4.9", optional = true}
httpx = ">=0.21.2"
langchain = { version="^0.1.20", optional = true}
llama-index = { version="^0.10.37", optional = true}
mistralai = { version="^0.1.8", optional = true}
openai = { version="^1.21.2", optional = true}
openinference-instrumentation-bedrock = { version="^0.1.3", optional = true}
openinference-instrumentation-dspy = { version="^0.1.7", optional = true}
openinference-instrumentation-langchain = { version="^0.1.14", optional = true}
openinference-instrumentation-llama-index = { version="^1.3.0", optional = true}
openinference-instrumentation-mistralai = { version="^0.0.5", optional = true}
openinference-instrumentation-openai = { version="^0.1.4", optional = true}
opentelemetry-api = { version="^1.24.0", optional = true}
opentelemetry-exporter-otlp-proto-http = { version="^1.24.0", optional = true}
opentelemetry-sdk = { version="^1.24.0", optional = true}
pydantic = ">= 1.9.2"
pydantic-core = "^2.18.2"
typing_extensions = ">= 4.0.0"

[tool.poetry.dev-dependencies]
mypy = "1.0.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.23.5"
python-dateutil = "^2.9.0"
types-python-dateutil = "^2.9.0.20240316"
opentelemetry-api = "^1.24.0"
opentelemetry-exporter-otlp-proto-http = "^1.24.0"
opentelemetry-sdk = "^1.24.0"
ruff = "^0.5.6"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
asyncio_mode = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
telemetry=["opentelemetry-api", "opentelemetry-exporter-otlp-proto-http", "opentelemetry-sdk"]
instrument-bedrock=["boto3", "openinference-instrumentation-bedrock"]
instrument-dspy=["dspy-ai", "openinference-instrumentation-dspy"]
instrument-langchain=["langchain", "openinference-instrumentation-langchain"]
instrument-llama-index=["llama-index", "openinference-instrumentation-llama-index"]
instrument-mistralai=["mistralai", "openinference-instrumentation-mistralai"]
instrument-openai=["openai", "openinference-instrumentation-openai"]
